# Rust-FullStack-App

./: .env.example  .gitignore  Dockerfile  README.md  compose.yml
frontend/: AGENTS.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: endpoints.ts  http.ts
rust-api/: .env.example  Cargo.toml
rust-api/migrations/: 0001_users.sql  0002_notifications.sql  0003_notifications_is_read.sql  0004_roles_policies_auth.sql  0005_pbac_overhaul.sql  0006_unique_bindings.sql  0007_leave_requests.sql  0008_reports.sql  0009_payslips.sql  0010_payslip_templates.sql
rust-api/src/: app.rs  main.rs
rust-api/src/config/: env.rs
rust-api/src/db/: mod.rs  pool.rs
rust-api/src/events/: notification_event.rs
rust-api/src/handlers/: auth_handler.rs  leave_handler.rs  mod.rs  notification_handler.rs  payslip_handler.rs  policy_handler.rs  report_handler.rs  template_handler.rs  user_handler.rs  ws_notifications.rs
rust-api/src/models/: leave_request.rs  mod.rs  payslip.rs  payslip_template.rs  report.rs  user.rs  user_role.rs
rust-api/src/routes/: auth_routes.rs  leave_routes.rs  mod.rs  notification_routes.rs  payslip_routes.rs  policy_routes.rs  report_routes.rs  template_routes.rs  user_routes.rs
rust-api/src/services/: auth_service.rs  leave_service.rs  mod.rs  notification_service.rs  payslip_service.rs  policy_service.rs  report_service.rs  template_service.rs  user_service.rs
rust-api/src/state/: app_state.rs  mod.rs  notification_hub.rs
rust-api/src/utils/: auth.rs  errors.rs  mod.rs
(+70 files in other folders)
