[package]
name = "rust-api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws"] }

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUID support
uuid = { version = "1", features = ["serde", "v4"] }

# Time / timestamp support
chrono = { version = "0.4", features = ["serde"] }

# Database
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "uuid",
  "chrono"
] }

# CORS Middleware
tower-http = { version = "0.5", features = ["cors", "fs"] }
futures-util = "0.3.31"
bcrypt = "0.15"
rand = "0.8"
dotenvy = "0.15"
